# rust-core-spec

./: Cargo.toml  README.md  flake.nix
generated_tests/: bin.rs  doc.rs
partial_compute/: Cargo.toml  README.md
partial_compute/src/: drop_unary_calls_to.rs  lib.rs  prelude.rs  trim_signatures.rs  utils.rs
partial_compute/tests/: main.rs
src/: generated.rs  generated_doc.rs  lib.rs  lifts.rs  test_driver.rs
src/specs/: mod.rs  num.rs  option.rs  vec.rs
